2006-06-04  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/paper-system.scm (paper-system-annotate): fix problem when
	annotating an empty system

2006-06-04  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* GNUmakefile.in: reinstate old web tar/copying.

2006-06-03  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/lyric-combine-music-iterator.cc (find_voice): return 0 if
	nothing changes. (Erik S) 

	* lily/percent-repeat-iterator.cc (get_music_list): fix repeat
	count. (Erik S)

2006-05-28  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/define-markup-commands.scm (whiteout): do not force
	foreground color of argument markup to black.

	* scm/stencil.scm (annotate-y-interval): put arrow dimension at
	the left of the arrow, instead of below the arrow name, so that,
	when two little arrows are vertically stacked, their dimensions
	and name should not overlap. Add a color key parameter.

	* scm/paper-system.scm (paper-system-annotate): Annotate
	next-space+next-padding instead of next-space. Annotate space
	between next-padding and next-space+padding, respectively, and
	following system extent and refpoint-Y-extent. Use colors.

	* scm/page.scm (annotate-page): translate annotations slightly to
	the right.

2006-06-03  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/figured-bass-position-engraver.cc (acknowledge_end_slur):
	fix for x-staff slurs. Thanks Joe!

	* buildscripts/output-distance.py
	(SystemLink.output_expression_change_count): keep track of changed
	details, and dump in details html page.
 
	* input/regression/figured-bass-staff.ly: add note about setting
	properties in Staff context.

	* lily/figured-bass-position-engraver.cc (acknowledge_slur):
	add slurs and ties to support too.

	* buildscripts/output-distance.py (main): set dest_dir
	argument. Add --max-count option.

2006-06-02  Jürgen Reuter  <reuter@ipd.uka.de>

	* ly/gregorian-init.ly: Converted to utf-8.  Added memorable
	shortcuts for special unicode chars that are useful in chant