@@ -1,3 +1,11 @@
+2006-06-05  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* buildscripts/output-distance.py (main): use compare-XXX for
+	compare files.
+	(main): --threshold option, default at 0.30
+
+	* output-distance.py (main): add --threshold option.
+
 2006-06-04  Nicolas Sceaux  <nicolas.sceaux@free.fr>
 
 	* scm/paper-system.scm (paper-system-annotate): fix problem when
